force-app/main/default/objects/CLM_Presentation__c/CLM_Presentation__c.object-meta.xml
<CustomObject>
    <label>CLM Presentation</label>
    <nameField>
        <label>Presentation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CLM Presentations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>