force-app/main/default/objects/CLM_Presentation__c/fields/Allow_Email__c.field-meta.xml
<CustomField>
    <fullName>Allow_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Email</label>
    <type>Checkbox</type>
</CustomField>