force-app/main/default/objects/CLM_Presentation__c/fields/Allow_Unaligned__c.field-meta.xml
<CustomField>
    <fullName>Allow_Unaligned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Unaligned</label>
    <type>Checkbox</type>
</CustomField>