force-app/main/default/objects/CLM_Presentation__c/fields/Double_Tap_Zoom__c.field-meta.xml
<CustomField>
    <fullName>Double_Tap_Zoom__c</fullName>
    <label>Double Tap Zoom</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enabled</fullName>
                <default>true</default>
                <label>Enabled</label>
            </value>
            <value>
                <fullName>Disabled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>