force-app/main/default/objects/CLM_Presentation__c/fields/Format__c.field-meta.xml
<CustomField>
    <fullName>Format__c</fullName>
    <label>Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PDF</fullName>
                <default>true</default>
                <label>PDF</label>
            </value>
            <value>
                <fullName>HTML</fullName>
            </value>
            <value>
                <fullName>ZIP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>