force-app/main/default/objects/CLM_Presentation__c/fields/Player_Gesture__c.field-meta.xml
<CustomField>
    <fullName>Player_Gesture__c</fullName>
    <label>Player Gesture</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tap Bottom</fullName>
                <default>true</default>
                <label>Tap Bottom</label>
            </value>
            <value>
                <fullName>Swipe</fullName>
            </value>
            <value>
                <fullName>Tap Sides</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>