force-app/main/default/objects/CLM_Presentation__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>CLM Presentations</relationshipLabel>
    <relationshipName>CLM_Presentations</relationshipName>
    <type>Lookup</type>
</CustomField>