force-app/main/default/objects/CLM_Presentation__c/fields/Public_Content_URL__c.field-meta.xml
<CustomField>
    <fullName>Public_Content_URL__c</fullName>
    <label>Public Content URL</label>
    <type>Url</type>
</CustomField>