force-app/main/default/objects/CLM_Presentation__c/fields/Slide_Count__c.field-meta.xml
<CustomField>
    <fullName>Slide_Count__c</fullName>
    <label>Slide Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>