force-app/main/default/objects/CLM_Presentation__c/fields/Territory_Ids__c.field-meta.xml
<CustomField>
    <fullName>Territory_Ids__c</fullName>
    <label>Territory Ids</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>